# WORMS-Coordination

./: README.md
brain/: package.xml  setup.py
brain/brain/: action_node.py  brain.py
brain/launch/: launch.py
brain_package/: package.xml  setup.cfg  setup.py
brain_package/brain_package/: all_worms.csv  brain.py
brain_package/launch/: launch.py
controller_package/: package.xml  setup.py
controller_package/controller_package/: all_worms.csv  controller.py  motor_controller.py  testing.py
controller_package/launch/: launch.py
gait_package/: package.xml  setup.cfg  setup.py
gait_package/gait_package/: configuration_table.csv  gait_manager.py  testing.py
gait_package/launch/: launch.py
messages/: CMakeLists.txt  package.xml
messages/msg/: Command.msg  Configuration.msg  Personal.msg  Readiness.msg  State.msg  StateCommunication.msg  System.msg
motor_controller/: package.xml  setup.py
motor_controller/launch/: controller_launch.py  motor_launch.py
motor_controller/motor_controller/: motor_interface.py  pd_controller.py  pid_controller.py
