<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brain</name>
  <version>0.0.0</version>
  <description>Primary brain logic for WORMS project.</description>
  <maintainer email="ethanlai@mit.edu">ethan</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>messages</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
